[package]
name = "bitlight-core-derive"
description = "A Rust library providing derive macros for the Bitlight Core."
version = "0.4.2"
authors = ["Bitlight Labs"]
edition = "2024"
homepage = "https://bitlightlabs.com/"
license = "MIT/Apache-2.0"
repository = "https://github.com/bitlightlabs/bitlight-core-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
better_default = "1.0"
darling = "0.20"
iter_tools = "0.24"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
